--- a/styles.css
+++ b/styles.css
@@ -72,4 +72,16 @@
 }
 .container2{
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 8pxpx;
+}
+.container2 .imgs{
+    display: flex;
+    flex: 1;
+    gap: 8px
+}
+.container2 .one{
+    border: 1px #3882F6;
+    border-radius: 2px;
 }
