--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,21 @@
 .container2 .imgs{
     display: flex;
     flex: 1;
-    gap: 8px
+    gap: 8px;
 }
-.container2 .one{
-    border: 1px #3882F6;
-    border-radius: 2px;
+.container2 img{
+    border: 2px solid #3882F6;
+    border-radius: 5px;
+    padding: 50px;
+    margin: 16px 30px;
+}
+.container2 p{
+    
+    text-align: center;
+    max-width: 130px;
+    margin: 16px 30px;
+    margin-top: 0;
+    font-size: 18px;
+    color: #86878a;
+    font-family: 'Courier New', Courier, monospace;
 }
