information and quote styling

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@
 .container2{
     display: flex;
     align-items: center;
+    
     flex-direction: column;
     gap: 8pxpx;
 }
@@ -85,21 +86,45 @@
     border: 2px solid #3882F6;
     border-radius: 5px;
     padding: 50px;
-    margin: 16px 30px;
+    margin: 16px 16px 0 30px;
+    
 }
 .container2 p{
-    
     text-align: center;
     max-width: 130px;
-    margin: 16px 30px;
-    margin-top: 0;
-    font-size: 18px;
+    margin: 8px 16px 30px 30px;
+    padding-top:0 ;
+    font-size: 12px;
     color: #1F2937;
     font-family: 'Courier New', Courier, monospace;
 }
 .container2 .headertxt2{
-    padding: 16px;
+    padding: 30px;
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
+}
+.container3{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: #E5E7EB ;
+    font-family: 'Courier New', Courier, monospace;
+}
+.container3 #quote{
+    padding: 100px 100px 0px 100px ;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+   
+}
+.container3 #person{
+    margin-top: 0;
+    padding-right:100px ;
+    padding-bottom: 100px;
+    font-weight: 700;
 }
