--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body{
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    
+}
 .header, .footer{
     display: flex ;
     align-items: center;
@@ -24,6 +30,7 @@
     font-size: 24px;
     color: #F9FAF8 ;
     margin: 0px;
+    
 }
 .container1{
     display: flex;
@@ -37,6 +44,7 @@
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 800;
+    margin-left: 90px;
     
 }
 .container1 .text{
@@ -49,16 +57,16 @@
     background-color: #3882F6;
     border: solid 1px #3882F6;
     border-radius: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    max-width: 80px;
+    
+    padding: 5px 20px;
+    max-width: 85px;
+    margin-left: -320px;
 }
 .content{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    
 }
 .content .text{
     max-width: 400px;
@@ -96,7 +104,7 @@
     padding-top:0 ;
     font-size: 12px;
     color: #1F2937;
-    font-family: 'Courier New', Courier, monospace;
+    
 }
 .container2 .headertxt2{
     padding: 30px;
