--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
     margin-bottom: 20px;
     background-color: #1f2937;
     color: #F9FAF8;
+    
 }
 .logo{
     margin-right: auto;
@@ -37,6 +38,7 @@ body{
     padding: 50px 16px;
     background-color: #1f2937;
     padding-bottom: 100px;
+    flex-shrink: 0;
     
 
 }
@@ -44,8 +46,9 @@ body{
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 800;
-    margin-left: 90px;
-    
+    margin-left: 30px;
+ 
+
 }
 .container1 .text{
     color: #E5E7EB;
@@ -135,4 +138,48 @@ body{
     padding-right:100px ;
     padding-bottom: 100px;
     font-weight: 700;
+}
+.container4{
+    background-color: #3882F6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    margin: 70px;
+    border-radius: 8px;
+    gap: 0;
+    
+}
+
+.headertxt4{
+    color:#F9FAF8;
+    font-size: 24px;
+    font-weight: 800;
+    
+}
+.content4{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3px;
+    color: #E5E7EB;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+#btn{
+    color: white;
+    background-color:#3882F6;
+    border: solid 1px #ffffff;
+    border-radius: 5px;
+    padding: 3px 20px 5px 20px;
+    font-size: 10px;
+    font-weight: 600;
+    margin-left: 50px;
+    margin-right: 8px;
+    margin-top: 0px;
+    flex-shrink: 0;
+
+}
+.footer{
+    padding-top: 40px;
+    padding-bottom: 50px;
 }
